k8s/ns.yml
apiVersion: v1
kind: Namespace
metadata:
   name: myapp
   labels:
      name: myapp
