k8s/deploy-be.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-be
  labels:
    app: flask-be
  namespace: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-be
  template:
    metadata:
      labels:
        app: flask-be
    spec:
      containers:
      - name: flask-be
        image: vksegfault/be:3
        ports:
        - containerPort: 5000
