k8s/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-fe
  namespace: myapp
  labels:
    kubernetes.io/service-name: lb-fe
spec:
  type: LoadBalancer
  selector:
    app: react-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
