k8s/svc-be.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-be
  namespace: dev
  labels:
    app: svc-be
spec:
  selector:
    app: flask-be
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
