k8s/svc-fe.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-fe
  namespace: myapp
  labels:
    kubernetes.io/service-name: svc-fe
spec:
  # type: NodePort
  selector:
    app: react-fe
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      # nodePort: 30007
