k8s/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: myapp
  labels:
    kubernetes.io/service-name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
