k8s/svc-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-postgres
  namespace: myapp
  labels:
    kubernetes.io/service-name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
