k8s/ing-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: myapp
spec:
  tls:
    - hosts:
        - app.pl
      secretName: cert-secret
  rules:
  - host: app.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-nginx
            port:
              number: 80
      - path: /members/
        pathType: Prefix
        backend:
          service:
            name: svc-be
            port:
              number: 5000
