k8s/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-fe
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  namespace: myapp
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-fe
            port:
              number: 80
